@@ -23,7 +23,6 @@
 package org.eclipse.tractusx.irs.aaswrapper.registry.domain;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -60,8 +59,7 @@ public class DecentralDigitalTwinRegistryService implements DigitalTwinRegistryS
                                                                                                                  .filter(edcDiscoveryResult -> edcDiscoveryResult.bpn()
                                                                                                                                                                  .equals(key.bpn()))
                                                                                                                  .map(EdcDiscoveryResult::connectorEndpoint)
-                                                                                                                 .collect(
-                                                                                                                         Collectors.toList()))
+                                                                                                                 .toList())
                                                                   .flatMap(List::stream)
                                                                   .flatMap(List::stream)
                                                                   .toList();
